--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="brand_summary">
                 <h2 class="brand_summary_title">My failures of
                   <br> previous year</h2>
-                <p class="brand_summary_title_content">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p class="brand_summary_title_content">Contrary to popular belief, Lorem Ipsum is not simply <br> random text. It has roots in a piece of classical Latin <br> literature from 45 BC, making it over 2000 years old. <br> Richard McClintock.</p>
                 <ul class="brand_content">
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular belief.</li>
@@ -86,14 +86,20 @@
   
             <!--poster ending-->
     </main>
-
+            <!--Contact Me Start-->
+            <div class="contact-me">
+                <p>Let Me Get You A Beautiful Website</p>
+                <a href="" class="button-two">Hire Me</a>
+            </div>
+            <!--Contact Me End-->
 
             <!-- Footer start -->
 
     <footer>
             <div class="details">
                 <h2 class="contact">Future</h2>
-                <p class="info-contact">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="info-contact">There are many variations of passages of  
+                Lorem Ipsu <br> available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                 <p class="info-contact">Email : info@gmail.com</p>
                 <p class="info-contact">Phone : 01234567890</p>
                 <img src="images/icons/fb.png" alt="">
