--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!--Contact Me Start-->
             <div class="contact-me">
                 <p>Let Me Get You A Beautiful Website</p>
-                <a href="" class="button-two">Hire Me</a>
+                <a href="#" class="button-two">Hire Me</a>
             </div>
             <!--Contact Me End-->
 
