--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <!-- My Plan End End -->
 
             <!--poster star--> 
-          <div class="b1"> 
-            <ul class="b2">
-              <li><h1 class="b3">Awlays keep a positive <br> mindset</h1></li>
+          <div class="posterhead"> 
+            <ul class="postertitle">
+              <li><h1 class="poster-sub">Awlays keep a positive <br> mindset</h1></li>
               <li><button class="btn_poster">Contact Us</button></li>
           </ul>
           </div>
