--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="brand_summary">
                 <h2 class="brand_summary_title">My failures of
                   <br> previous year</h2>
-                <p class="brand_summary_title_content">Contrary to popular belief, Lorem Ipsum is not simply <br> random text. It has roots in a piece of classical Latin <br> literature from 45 BC, making it over 2000 years old. <br> Richard McClintock.</p>
+                <p class="brand_summary_title_content">Contrary to popular belief, Lorem Ipsum is not <br> simply random text.It has roots in a piece of <br> classical Latin  literature from 45 BC, making it <br> over 2000 years old.Richard McClintock.</p>
                 <ul class="brand_content">
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular belief.</li>
@@ -74,7 +74,7 @@
                 </div>
         </div>
 
-            <!-- My Plan End End -->
+            <!-- My Plan End -->
 
             <!--poster star--> 
           <div class="posterhead"> 
@@ -84,7 +84,7 @@
           </ul>
           </div>
   
-            <!--poster ending-->
+            <!--poster end-->
 
 
              <!--Contact Me Start-->
@@ -116,9 +116,16 @@
             </div>
     </footer>
 
-                    <!-- Footer End -->
+                    <!--Footer End-->
 
 
 
 </body>
 </html>
+
+
+
+<!--END-->
+
+<!--Programming HERO 
+*First Project -->
